# haskell-data-binary-ieee754

./: Tests.hs  data-binary-ieee754.cabal  data-binary-ieee754.tex  ieee754-parser.cabal
Data/Binary/: IEEE754.hs  IEEE754.lhs
lib/Data/Binary/: IEEE754.hs
tests/: Tests.hs  tests.cabal
