name: data-binary-ieee754
version: 0.4.1
synopsis: Parser/Serialiser for IEEE-754 floating-point values
description: Convert Float and Decimal values to/from raw octets.
license: GPL-3
license-file: License.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Data
stability: experimental
bug-reports: mailto:jmillikin@gmail.com
homepage: http://ianen.org/haskell/data-binary-ieee754/
tested-with: GHC==6.10.4, GHC==6.12.1

extra-source-files:
  data-binary-ieee754.tex

source-repository head
  type: darcs
  location: http://ianen.org/haskell/data-binary-ieee754/

flag test
  default: False

library
  build-depends:
      base >=3 && < 5
    , binary >= 0.4 && < 0.6
    , bytestring >= 0.9 && < 0.10

  exposed-modules:
    Data.Binary.IEEE754

executable data-binary-ieee754_tests
  main-is: Tests.hs

  if flag(test)
    build-depends:
        QuickCheck >= 2.2 && < 2.3
      , test-framework >= 0.2 && < 0.4
      , test-framework-quickcheck2 >= 0.2 && < 0.3
  else
    buildable: False
